# olmoearth-uk-landcover

./: .gitignore  PRD.md  README.md  experiment_config.json  pyproject.toml
src/: acquire.py  app.py  autocorrect.py  change.py  classify.py  config.py  diagnose.py  embeddings.py  evaluate.py  experiment.py  pipeline.py  preprocess.py
tests/: conftest.py  test_app.py  test_autocorrect.py  test_backend.py  test_classify.py  test_diagnose.py  test_evaluate.py  test_experiment.py
webui/backend/: cog.py  main.py
webui/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
webui/frontend/src/: App.tsx  constants.test.ts  constants.ts  index.css  main.tsx  mapStyle.ts  types.ts
webui/frontend/src/api/: client.test.ts  client.ts
webui/frontend/src/components/: AboutModal.tsx  BasemapToggle.tsx  ClickPopup.tsx  ComparisonControls.tsx  ComparisonImages.tsx  ComparisonView.tsx  ConnectionStatus.tsx  ControlPanel.tsx  ErrorBoundary.tsx  ExperimentDashboard.tsx  F1Chart.tsx  IterationCard.tsx  LayerControls.tsx  LayerItem.tsx  Legend.tsx  LoopStatus.test.tsx  LoopStatus.tsx  MapView.tsx  SessionSelector.tsx  SummaryStats.tsx
webui/frontend/src/components/ui/: accordion.tsx  dialog.tsx  select.tsx  separator.tsx  slider.tsx
webui/frontend/src/hooks/: useBackendHealth.ts  useLatestSession.ts  useSessionSSE.test.ts  useSessionSSE.ts  useSwipeDivider.test.ts  useSwipeDivider.ts
