[project]
name = "olmoearth-uk-landcover"
version = "0.1.0"
description = "OlmoEarth-based landcover classification demo for Cambridge, UK"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "rasterio",
    "pystac-client",
    "planetary-computer",
    "shapely",
    "pyproj",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock"]
all = [
    "torch>=2.4",
    "olmoearth-pretrain",
    "scikit-learn",
    "scipy",
    "rioxarray",
    "streamlit",
    "folium",
    "streamlit-folium",
    "matplotlib",
    "google-genai>=1.0",
    "pydantic>=2.0",
    "anthropic>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
