[project]
name = "olmoearth-uk-landcover"
version = "0.1.0"
description = "OlmoEarth-based landcover classification demo for Cambridge, UK"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "rasterio",
    "pystac-client",
    "planetary-computer",
    "shapely",
    "pyproj",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock"]
webui = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "rio-tiler>=7.0",
]
all = [
    "torch>=2.4",
    "olmoearth-pretrain",
    "scikit-learn",
    "scipy",
    "rioxarray",
    "streamlit",
    "folium",
    "streamlit-folium",
    "matplotlib",
    "google-genai>=1.0",
    "pydantic>=2.0",
    "anthropic>=0.30",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "rio-tiler>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "webui"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
